schema/testdata/validation_jobs_permission_attribute_role_invalid_args/schema.keel
job MyJob1 {
    @permission(roles: [NoRoleName])
}

job MyJob2 {
    @permission(roles: [Admin,NoRoleName])
}

job MyJob3 {
    @permission(roles: Admin)
}

job MyJob4 {
    @permission([Admin])
}


role Admin {}

role Developer {}